--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -1,5 +1,7 @@
 {
 	"echo-category-title-task-manager-assignee-added": "Assignation d'une tâche",
 	"notification-header-task-manager-assignee-added": "La tâche $1 vous a été assignée",
-	"echo-pref-tooltip-task-manager-assignee-added": "Vous alerte si une tâche vous a été assignée"
+	"echo-pref-tooltip-task-manager-assignee-added": "Vous alerte si une tâche vous a été assignée",
+	"mytasks": "Mes tâches",
+        "taskManager-extension-description": "Gestion des tâches"
 }
